@@ -1,6 +1,8 @@
 DIST samplv1-0.3.2.tar.gz 121776 SHA256 f5ac8d159b4a349179c023e62a6bced4a302e045f35c60d8d4d0ebb6b81fd8c8 SHA512 91878cadb6ec1effe3744c738cacb3afd11f153cb8c6b9f7a15adb2e46e5170f74aeec04ce4b369a30551b7e4d33f96909be3efeb429888ce6216437524e67cd WHIRLPOOL dc3ae3c7918c7749711dda157fe642116ca39be55bba488797f6855fa29921a2f05df39e2246d5c77e3f42c3800a133b2454c80dc7dbe55068097e0f91c2b321
+DIST samplv1-0.3.3.tar.gz 130957 SHA256 00b199ed24e160763fb10a36942b8e79cbeabe861efe54b33a08bb21e5217f21 SHA512 83ae4c0b6f82a38143efb231871232147cd28c47ffbffbc57549efc6043676f9b4d43e90c71a8211c2222dd38bf2e6bb4523d15fd4c6c385feec52d68acffc50 WHIRLPOOL 13142280916f4148b29b7cec0083c4338464c97ed0f3c178a43531713f482eeeb85716f6ef6356c07b5989b769b3d5efb41a093e4104692b27310196a94c1710
 EBUILD samplv1-0.3.2-r1.ebuild 1587 SHA256 97988613ed6c9e54c6ba9ca2c7d5a626ad04611c9c039ddc1cd4540c8804c539 SHA512 f96bc5d9907d84e3ff762c72677bb31cadf30a9fa9f42f3bf8393a362ef22cb071806d556f33b632b9ca301777657eb0aca1c4ed7576c067dc086e7274ced332 WHIRLPOOL 66422abb93f2ea97d81a72f54e4dff0ad2a08e1f247ab7c72eda0f01107c68ffb899bdbea8f1332a6cf08d920ba2ac8ebc5d6500968af6f85b82f3b89d0baba3
 EBUILD samplv1-0.3.2.ebuild 1058 SHA256 88e04ef0a5fd5d2a5178553898084c6ec76f045e874689310c57167230bc9d08 SHA512 859d8ecda15945aa3035c2b52b47f65d1356e48e48aa3841315ac43287266e184165199fd086164d77fbd6abf8e3319f319fd414c216eedde08dfc5fe2fad959 WHIRLPOOL b72beb3704ecc29fe8349689a78da2e5946c451af7bbac683d2ecb7d3668ece5791e0ac0d80e5b7cb09a3dd0dcc787b553967d6f9f161f03189e1dc503dc13d5
+EBUILD samplv1-0.3.3.ebuild 1638 SHA256 258731b77a0e245bd705285d5df48a9605e629d3437afafa6b318a5673635130 SHA512 5c3116ea45ec7262a07b0170ab2eb1efc446afe0001b2d89e6176f7cd9a06ffde6e2e5bade1e311b9a3fb9767afb3414a97aa429a567a42a21428c5a1e07d99b WHIRLPOOL e7d9a383439f9b3ee2dbbc272c40f1c43f65c02dfa809c77315bd06e6509e5ee66a638aa506ff7470837a7d0e396df157b458dc4aebb26d0a2f9f983381c8b3c
 EBUILD samplv1-9999.ebuild 1638 SHA256 258731b77a0e245bd705285d5df48a9605e629d3437afafa6b318a5673635130 SHA512 5c3116ea45ec7262a07b0170ab2eb1efc446afe0001b2d89e6176f7cd9a06ffde6e2e5bade1e311b9a3fb9767afb3414a97aa429a567a42a21428c5a1e07d99b WHIRLPOOL e7d9a383439f9b3ee2dbbc272c40f1c43f65c02dfa809c77315bd06e6509e5ee66a638aa506ff7470837a7d0e396df157b458dc4aebb26d0a2f9f983381c8b3c
-MISC ChangeLog 1331 SHA256 b7601b4b51448fce1580c41df31a56717dcaa1ba5c7dfb7398359170a11af698 SHA512 1e86cfb5c95528425dcf4ecee754f23148f731b68d06e7683cd08abbd9c03b893f2cfba9749e4badbec68cdd7b7bc198df9864f0d15bdf5015ed9529c6dc9dc9 WHIRLPOOL 8cf360e71d29c3ef1ef2e48ab6e7d9a638315e1c849a3fcf46b46650b91387ef115f3c8ee72dda60305a67693841c30aad0f7b13f8dc3879c2c68c751b37c4bf
+MISC ChangeLog 1468 SHA256 abc2322cfd6bcb8da406b2c21bc5714277a6093277b39785a41db55f6591ab80 SHA512 7aa4e4cc5fd94df2372c43d116d3eacfbc50e0c6524ee11d8b0be6c115cec68c4505a91dbd6ad2e5f2a3157b5a316b601e5f9a25100e3af8d8b36223a0ccabac WHIRLPOOL 1926688e047830b880a5edf35beac9c8f0dd4589a0bf9e058c58e0251adeee65a18930b47f598ab56b8bda15bcfd62add4655ad76070d746cbec0dea97ae67b4
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
